# centrosome

./: .gitignore  .travis.yml  README.md  README.rst  build.py  package_for_linux.sh  package_for_macos.sh  package_for_windows.bat  pyproject.toml  setup.py  tox.ini
.github/workflows/: pythonpackage.yml
centrosome/: _propagate.c
